# AERIS-HIL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aeris_hil/: orchestrator.py  signal_interface.py
robot_tests/: bms_charge.robot
tests/: test_basic.py  test_orchestrator.py
